namespace game
{
    public class AnimationConstants
    {
        public const string SPEED = "speed";

        public const string MOVE_VARIATION = "move_variation";
        public const string ATTACK_VARIATION = "attack_variation";
        public const string DEATH_VARIATION = "death_variation";

        public const string ATTACK_TRIGGER = "attack";
        public const string DEATH_TRIGGER = "death";
    }
}